// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentsSetting Check snapshot 1`] = `
<div
  class="personal-info-wrap"
>
  <div
    class="wrap-head"
  >
    <h2>
      Agents in Queue
    </h2>
  </div>
   
  <div
    class="top"
  >
    <div
      class="left"
    >
      Add agent

    </div>
     
    <div
      class="agents users"
    >
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <div
    class="wrap-body"
  >
    <div
      class="personal-info"
    >
      <div
        class="personal-info__first-part"
      >
        <div
          class="item-container with-err"
        >
          <div
            class="label"
          >
            <input
              class="input-field"
              placeholder="Enter name or Agent Number"
            />
             
            <span
              class="list"
              style="display: none;"
            />
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="agents users"
    >
      <drop-list-stub
        acceptsdata="function () { return true; }"
        acceptstype="function () { return true; }"
        dragimageopacity="0.7"
        items=""
        mode="cut"
        tag="div"
      />
    </div>
  </div>
</div>
`;

exports[`ConfigSetting Check snapshot 1`] = `
<div
  class="personal-info-wrap"
>
  <div
    class="wrap-head"
  >
    <h2>
      Settings
    </h2>
  </div>
   
  <div
    class="wrap-body"
  >
    <div
      class="personal-info"
    >
      <div
        class="personal-info__first-part"
      >
        <div
          class="item-container with-err"
        >
          <label
            class="strategy-label options-label"
          >
            
              Strategy
 
            <input
              class="input-field num"
              readonly="readonly"
              type="text"
            />
             
            <span
              class="triangle"
            >
              <img
                alt="select"
                src="../../../../../assets/img/icons/queues-select-arrow.png"
              />
            </span>
             
            <ul
              class="list-related-numbers"
              style="display: none;"
            >
              <li>
                Ring all
              </li>
               
              <li>
                Least recent
              </li>
               
              <li>
                Fewest calls
              </li>
               
              <li>
                Random
              </li>
               
              <li>
                RR memory
              </li>
               
              <li>
                Linear
              </li>
               
              <li>
                W random
              </li>
            </ul>
          </label>
           
          <label
            class="strategy-label options-label"
          >
            
              Timeout
 
            <input
              class="input-field num"
              readonly="readonly"
              type="text"
            />
             
            <span
              class="triangle"
            >
              <img
                alt="select"
                src="../../../../../assets/img/icons/queues-select-arrow.png"
              />
            </span>
             
            <ul
              class="list-related-numbers"
              style="display: none;"
            >
              <li>
                0
              </li>
               
              <li>
                1
              </li>
               
              <li>
                2
              </li>
               
              <li>
                3
              </li>
               
              <li>
                4
              </li>
               
              <li>
                5
              </li>
            </ul>
          </label>
           
          <label
            class="strategy-label options-label"
          >
            
              Ring in use
 
            <input
              class="input-field num"
              readonly="readonly"
              type="text"
            />
             
            <span
              class="triangle"
            >
              <img
                alt="select"
                src="../../../../../assets/img/icons/queues-select-arrow.png"
              />
            </span>
             
            <ul
              class="list-related-numbers"
              style="display: none;"
            >
              <li>
                Yes
              </li>
               
              <li>
                No
              </li>
            </ul>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteQueue Check snapshot 1`] = `
<div
  class="personal-info-wrap"
>
  <div
    class="delete-block"
  >
    <div
      class="delete-top-block"
    >
      <span
        class="delete-image"
      >
        <img
          alt="delete"
          src="@/assets/img/icons/delete-queue.svg"
        />
      </span>
       
      <div
        class="top-content-block"
      >
        <span
          class="top-title"
        >
          Delete Queue?
        </span>
         
        <span
          class="top-content"
        >
          Are you sure delete this Queue 
        </span>
      </div>
    </div>
     
    <div
      class="delete-btn-block"
    >
      <span
        class="cancel-btn"
      >
        Cancel
      </span>
       
      <span
        class="delete-btn"
      >
        Delete 
      </span>
    </div>
  </div>
</div>
`;

exports[`ManagersSetting Check snapshot 1`] = `
<div
  class="personal-info-wrap"
>
  <div
    class="wrap-head"
  >
    <h2>
      Managers in Department
    </h2>
  </div>
   
  <div
    class="top"
  >
    <div
      class="left"
    >
      Add manager
      
    </div>
     
    <div
      class="managers users"
    >
      <div
        class="manager user"
      >
        <div
          class="block"
        >
          <div
            class="round"
          >
            Name
          </div>
           
          <span
            class="name"
          />
        </div>
         
        <span
          class="name"
        >
          Agent Number
        </span>
         
        <span
          class="union"
        />
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="wrap-body"
  >
    <div
      class="personal-info"
    >
      <div
        class="personal-info__first-part"
      >
        <div
          class="item-container with-err"
        >
          <div
            class="label"
          >
            <input
              class="input-field"
              placeholder="Enter name or Agent Number"
            />
             
            <span
              class="list"
              style="display: none;"
            />
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="managers users"
    >
      <div
        class="manager user"
      >
        <div
          class="block"
        >
          <div
            class="round"
          >
            <img
              alt="avatar"
              src=""
            />
          </div>
           
          <span
            class="name"
          >
            
          </span>
        </div>
         
        <span
          class="name"
        >
          
        </span>
         
        <div
          class="action"
        >
          <label
            class="label-container"
          >
            <input
              class="edit"
              type="checkbox"
            />
             
            <span
              class="check"
            />
             
            <span
              class="text"
            >
              Edit
            </span>
          </label>
        </div>
         
        <img
          alt=""
          class="union"
          src="@/assets/img/icons/union.svg"
          width="19"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`QueueInfo Check snapshot 1`] = `
<div
  class="personal-info-wrap"
>
  <div
    class="wrap-head"
  >
    <h2>
      QUEUE INFO
    </h2>
     
    <span
      class="hr"
    />
     
    <img
      alt="trash"
      class="trash"
      src="@/assets/img/icons/trash.svg"
      width="30"
    />
  </div>
   
  <div
    class="wrap-body"
  >
    <div
      class="personal-info"
    >
      <div
        class="personal-info__first-part"
      >
        <span>
            Name of Queue:
        </span>
         
        <div
          class="item-container with-err"
        >
          <input
            class=""
            defaulvalue=""
            maxlength="12"
            placeholder="Enter name of Queue"
            style="width: 100%;"
          />
           
          <div
            class="wrap-static"
          >
            <div
              class="static"
            >
              <div
                class="label"
              >
                Number of Queue:
              </div>
               
              <div
                class="num"
              >
                1111
              </div>
            </div>
             
            <div
              class="static"
            >
              <div
                class="label"
              >
                Agents in Queue:
              </div>
               
              <div
                class="num"
              >
                4
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
